@@ -13,3 +13,9 @@ allprojects {
 
 dependencies {
 }
+
+subprojects{
+    tasks.withType(Test).configureEach{
+        jvmArgs = jvmArgs + ['--add-opens java.base/java.lang=ALL-UNNAMED']
+    }
+}
